--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@
     justify-content: flex-end;
 }
 
+.signup {
+    margin-left: auto;
+}
+
 .login {
     margin-left: 20px;
 }
@@ -53,11 +57,44 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
 }
 .photo-grid-item {
     border: 1px solid #fff;
     width: 300px;
     height: 300px;
+}
+
+.first-item {
+    order: 1;
+}
+
+.last-item {
+    order: -1;
+}
+
+.subscribe,
+.social {
+    align-self: flex-end;
+    margin-bottom: 20px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item {
+    border: 1px solid #fff;
+    background-color: #d6E9FE;
+    height: 200px;
+    flex: 1;
+}
+
+.footer-three,
+.footer-one {
+    flex: initial;
+    background-color: #5995DA;
+    width: 300px;
 }
